devops/roboshop-v1/cart.yml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: roboshop
spec:
  selector:
    appName: cart
  ports: 
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Pod
metadata: 
  name: cart
  namespace: roboshop
  labels:
   appName: cart
spec: 
  containers:
    - name: cart
      image: public.ecr.aws/w8x4g9h7/roboshop-v3/cart
      # environemnt variables for roboshop
