devops/roboshop-v1/catalogue.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: roboshop
spec:
  selector:
    appName: catalogue
  ports: 
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata: 
  name: catalogue
  namespace: roboshop
  labels:
   appName: catalogue
spec: 
  containers:
    - name: catalogue
      image: public.ecr.aws/w8x4g9h7/roboshop-v3/catalogue
      # environemnt variables for roboshop
