devops/roboshop-v1/user.yml

apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: roboshop
spec:
  selector:
    appName: user
  ports: 
    - protocol: TCP
      port: 8080
      targetPort: 8080
