devops/roboshop-v1/network-policy.yaml
apiVersion: v1 
kind: Namespace 
metadata: 
   name: roboshop 
   labels: 
      pod-security.kubernetes.io/enforce: restricted # baseline # privileged #restrcited
      pod-security.kubernetes.io/audit: restricted
      pod-security.kubernetes.io/warn: restricted


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: block-all-network
  namespace: default
spec: 
  policyTypes: 
    - Ingress 
    - Egress
